[metadata]
name = os-testr
summary = A testr wrapper to provide functionality for OpenStack projects
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    os_testr

[entry_points]
console_scripts =
    subunit-trace = os_testr.subunit_trace:main
    ostestr = os_testr.ostestr:main
    subunit2html = os_testr.subunit2html:main
    generate-subunit = os_testr.generate_subunit:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_testr/locale
domain = os-testr

[update_catalog]
domain = os-testr
output_dir = os_testr/locale
input_file = os_testr/locale/os-testr.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_testr/locale/os-testr.pot
