[metadata]
name = os-testr
summary = A testr wrapper to provide functionality for OpenStack projects
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page =  https://docs.openstack.org/os-testr/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    os_testr

[entry_points]
console_scripts =
    subunit-trace = os_testr.subunit_trace:main
    ostestr = os_testr.ostestr:main
    subunit2html = os_testr.subunit2html:main
    generate-subunit = os_testr.generate_subunit:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html
