[metadata]
name = os-testr
summary = A testr wrapper to provide functionality for OpenStack projects
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page =  https://docs.openstack.org/os-testr/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    os_testr

[entry_points]
console_scripts =
    subunit-trace = os_testr.subunit_trace:main
    ostestr = os_testr.ostestr:main
    subunit2html = os_testr.subunit2html:main
    generate-subunit = os_testr.generate_subunit:main

